--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE HTML>
 <html>
 <head>
-<title>PhoneGap</title>
-<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title id="page-title">Sencha Touch 2.0 MVC Helloworld</title>
+
+    <link rel="stylesheet" type="text/css" href="touch/resources/css/sencha-touch.css">
+    <script type="text/javascript" src="touch/sencha-touch-all-debug.js"></script>
+    <script type="text/javascript" src="app/app.js"></script>
+    <script type="text/javascript" src="phonegap-1.3.0.js"></script>
 </head>
 <body>
-<h1>Hello World</h1>
+
 </body>
 </html>
