--- a/assets/www/game.html
+++ b/assets/www/game.html
@@ -7,25 +7,18 @@
     <script type="text/javascript" src="phonegap-1.3.0.js"></script>
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
     <script type="text/javascript" src="jquery.mobile-1.0.1.js"></script>
-    <script type="text/javascript" src="jquery.jsonp-2.2.0.js"></script>
     <script type="text/javascript" src="a.js"></script>
 </head>
 <body>
    <div data-role="page">
 
         <div data-role="header">
-            <h1>Olympic Live Scores</h1>
+            <h1>My Title</h1>
         </div><!-- /header -->
 
-        <div data-role="content">
-            <a href="game.html">game </a>
-            <ul data-role="listview" data-inset="true" data-filter="true">
-                <li><a href="#">Acura</a></li>
-                <li><a href="#">Audi</a></li>
-                <li><a href="#">BMW</a></li>
-                <li><a href="#">Cadillac</a></li>
-                <li><a href="#">Ferrari</a></li>
-            </ul> 
+        <div data-role="content">   
+            <p>Hello world</p>
+            <a href="index.html">index </a>      
         </div><!-- /content -->
 
     </div><!-- /page --> 
