--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,22 +4,36 @@
     <title>Olympics Score Live</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" type="text/css" href="jquery.mobile-1.0.1.css">
+    <link rel="stylesheet" type="text/css" href="jqm-docs.css">
     <script type="text/javascript" src="phonegap-1.3.0.js"></script>
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
     <script type="text/javascript" src="jquery.mobile-1.0.1.js"></script>
     <script type="text/javascript" src="jquery.jsonp-2.2.0.js"></script>
-    <script type="text/javascript" src="a.js"></script>
+    <script>
+        var Ext = {};
+        Ext.util = {};
+        Ext.util.JSONP = {};
+        Ext.util.JSONP.callback = function(results) {
+            console.log(results);
+        } 
+        var start = function() {
+            console.log('start');
+            $.jsonp({
+                url: "https://raw.github.com/tomaszjureczko/OlympicLiveScoresAPI/master/games.json"
+            }); 
+        }
+    </script>
 </head>
 <body>
-   <div data-role="page">
+   <div data-role="page" data-theme="c">
 
-        <div data-role="header">
+        <div data-role="header" role="banner" class="ui-header ui-bar-f">
             <h1>Olympic Live Scores</h1>
         </div><!-- /header -->
 
         <div data-role="content">
             <a href="game.html">game </a>
-            <ul data-role="listview" data-inset="true" data-filter="true">
+            <ul data-role="listview" data-inset="true">
                 <li><a href="#">Acura</a></li>
                 <li><a href="#">Audi</a></li>
                 <li><a href="#">BMW</a></li>
@@ -29,7 +43,6 @@
         </div><!-- /content -->
 
     </div><!-- /page --> 
-
-
+    <script type="text/javascript" src="a.js"></script>
 </body>
 </html>
