--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" type="text/css" href="jquery.mobile-1.0.1.css">
     <link rel="stylesheet" type="text/css" href="jqm-docs.css">
+    <link rel="stylesheet" type="text/css" href="a.css">
     <script type="text/javascript" src="phonegap-1.3.0.js"></script>
     <script type="text/javascript" src="jquery-1.7.1.js"></script>
     <script type="text/javascript" src="jquery.mobile-1.0.1.js"></script>
     <script type="text/javascript" src="jquery.jsonp-2.2.0.js"></script>
     <script>
+        // HTML templates
+        var gameTemplate = '<li><a href="games.html?url={url}"><img class="ui-li-thumb ui-corner-tl" src="games/{icon}"/>{title} {url}</a></li>'; 
+        
         var Ext = {};
         Ext.util = {};
         Ext.util.JSONP = {};
         Ext.util.JSONP.callback = function(results) {
             console.log(results);
+            var listHtml = '';
+            $(results.games).each(function(index) {
+                this.url = unescape(this.url);
+                listHtml = listHtml + gameTemplate.supplant(this);
+            });
+            $('ul').html(listHtml);
+            $('ul').listview('refresh') 
         } 
+
         var start = function() {
             console.log('start');
             $.jsonp({
@@ -25,20 +37,14 @@
     </script>
 </head>
 <body>
-   <div data-role="page" data-theme="c">
+   <div data-role="page" data-theme="c" id="sports">
 
         <div data-role="header" role="banner" class="ui-header ui-bar-f">
             <h1>Olympic Live Scores</h1>
         </div><!-- /header -->
 
         <div data-role="content">
-            <a href="game.html">game </a>
             <ul data-role="listview" data-inset="true">
-                <li><a href="#">Acura</a></li>
-                <li><a href="#">Audi</a></li>
-                <li><a href="#">BMW</a></li>
-                <li><a href="#">Cadillac</a></li>
-                <li><a href="#">Ferrari</a></li>
             </ul> 
         </div><!-- /content -->
 
